--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <img src="banner/banner.png">
+    <img src="banner.png">
 
     <nav>
         <ul>
